syntax = "proto3";

package grpc;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/elojah/game_03/pkg/gogoproto/gogo.proto";

import "github.com/elojah/game_03/pkg/pbtypes/empty.proto";
import "github.com/elojah/game_03/pkg/pbtypes/string.proto";

import "github.com/elojah/game_03/pkg/tile/dto/set.proto";
import "github.com/elojah/game_03/pkg/entity/template.proto";
import "github.com/elojah/game_03/pkg/entity/dto/animation.proto";
import "github.com/elojah/game_03/pkg/entity/dto/template.proto";

service Admin {
	// ### TECHNICAL ADMIN ###

    // DB migrations
    rpc MigrateUp(pbtypes.String) returns (pbtypes.Empty);

	// Cookie secure management
	rpc RotateCookieKeys(pbtypes.Empty) returns (pbtypes.Empty);

	// Ping
	rpc Ping(pbtypes.Empty) returns (pbtypes.Empty);

	// ### GAME ADMIN ###

    // Map creation
    rpc CreateTileset(dto.CreateTilesetReq) returns (dto.CreateTilesetResp);
    rpc CreateWorld(pbtypes.Empty) returns (pbtypes.String);

    // Entity
	rpc CreateTemplate(dto.CreateTemplateReq) returns (entity.Template);
    rpc CreateAnimation(dto.CreateAnimationReq) returns (pbtypes.Empty);
}
