syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/entity/animation.proto";

message ListAnimationReq {
    repeated bytes EntityIDs             = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];

    int64 Size                           = 2;
    bytes State                          = 3;
}

message ListAnimationResp {
    repeated entity.Animation Animations = 1 [(gogoproto.nullable) = false];
    bytes State                          = 2;
}
