syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/elojah/game_03/pkg/gogoproto/gogo.proto";

import "github.com/elojah/game_03/pkg/ability/ability.proto";
import "github.com/elojah/game_03/pkg/entity/entity.proto";

message ListEntityReq {
    repeated bytes IDs         = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    repeated bytes CellIDs     = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    int64 Size                 = 3;
    bytes State                = 4;
}

message ListEntityResp {
    repeated entity.E Entities = 1 [(gogoproto.nullable) = false];
    bytes State                = 2;
}

message CreateEntityAbilityReq {
    bytes EntityID             = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
	ability.A Ability          = 2 [(gogoproto.nullable) = false];
}

message CreateEntityAbilityResp {
    bytes EntityID             = 1 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
    bytes AbilityID            = 2 [(gogoproto.customtype) = "github.com/elojah/game_03/pkg/ulid.ID", (gogoproto.nullable) = false];
}
