syntax = "proto3";

package dto;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_registration) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/elojah/game_03/pkg/room/room.proto";
import "github.com/elojah/game_03/pkg/user/user.proto";

message Room {
    room.R Room          = 1 [(gogoproto.nullable) = false];
    user.U Owner         = 2 [(gogoproto.nullable) = false];
}

message ListRoomReq {
    string After         = 1;
    int64 First          = 2;
}

message ListRoomResp {
    repeated Room Rooms  = 1 [(gogoproto.nullable) = false];
    uint64 Total         = 2;
    string Cursor        = 3;
}
